# langchain-agentic-ai

./: .gitignore  pyproject.toml
01_langchain_basic_chain/: README.md  main.py  pyproject.toml
02_jobsearch_agent/: README.md  main.py
03_agents_under_the_hood/: README.md  main1.py  main2.py  main3.py
